# bp-fabric-search

./: .gitignore  NOTICE  README.md  inventory.yml  pyproject.toml
bp_endpoint_search/: entrypoint.py
bp_endpoint_search/helpers/: apic.py  logging.py  printer.py
bp_endpoint_search/inventory/: inventory.py
bp_fabric_search/: entrypoint.py
bp_fabric_search/helpers/: apic.py  config.py  printer.py
bp_fabric_search/inventory/: __init__.py  inventory.py
